kubectl/01Deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment
  namespace: skills
  labels:
    app: frontend

spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-container
          image: 073762821266.dkr.ecr.ap-northeast-2.amazonaws.com/frontend-repo:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 820m
              memory: 1000Mi
            limits:
              cpu: 820m
              memory: 1000Mi
      restartPolicy: Always
