kubectl/02Service.yml
apiVersion: v1
kind: Service

metadata:
  name: frontend-svc
  namespace: skills

spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
